[tool.poetry]
name = "lagrange-backend"
version = "0.1.0"
description = ""
authors = ["Madison Scott-Clary <makyo@drab-makyo.com>"]
readme = "README.md"
packages = [{include = "lagrange_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
